[project]
name = "shadowchain-ai-env"
version = "0.1.0"
description = "OpenEnv environment for insider threat detection"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:app"

[tool.setuptools]
packages = ["."]